--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="title_core">Core</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">Search…</string>
+    <string name="filter">FILTER</string>
+    <string name="list_chuck_norris">List Chuck Norris</string>
+    <string name="img">img</string>
+    <string name="home">Home</string>
+    <string name="please_search">Silahkan cari data</string>
+    <string name="data_not_found">Pencarian Tidak Ditemukan</string>
 </resources>
